src/component/App.scss
@mixin flex($direction, $justify, $align) {
  display: flex;
  flex-direction: $direction;
  justify-content: $justify;
  align-items: $align;
}

@mixin triangle-animation($name, $rotate, $translateY) {
  @keyframes #{$name} {
    0% {
      opacity: 0;
    }
    40% {
      opacity: 1;
    }
    70% {
      opacity: 1;
      transform: none;
    }
    100% {
      opacity: 1;
      transform: rotate($rotate) translateY($translateY);
    }
  }
}

$blur: 0.9;
$blur-ex: 0.7;
$btn-search-side: 2.25rem;
$triangle-animation-duration: 3s;
$triangle-animation-delay: 2s;
$input-width: 15rem;
$input-padding: 0.5rem;

@function triangle-animation-opt($name, $delay) {
  @return $name $triangle-animation-duration $delay ease-out forwards;
}

@keyframes spin {
  from {
    transform: rotate(0);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes blink {
  from {
    transform: none;
  }
  to {
    transform: scale(1.5);
  }
}

@include triangle-animation(hand, -60deg, -8rem);
@include triangle-animation(mask, 60deg, -8rem);
@include triangle-animation(home, 0, 5rem);

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  padding-right: 0 !important;
  overflow-y: unset !important;
  overflow-x: hidden;
}

a {
  text-decoration: none;
  outline: none;
}

.invisible {
  visibility: hidden;
}

.toast-popup {
  transform: scale(0.8);
  opacity: 0.7;
}

.txt-jumbo {
  font-size: 6rem;
}
.txt-subjumbo {
  font-size: 3rem;
}
.txt-topic-local {
  font-size: 2rem;
}
.container {
  position: relative;
  color: #fff;
  text-align: center;
  @include flex(column, center, center);
}

.content-wrapper {
  position: relative;
  width: 100%;
  min-height: 100vh;
  @include flex(column, center, center);
}

.virus {
  color: firebrick;
  font-size: 4rem;
}
.spin {
  animation: spin 2s linear infinite;
}

.triangle-area {
  position: relative;
  width: 100%;
  height: 20rem;
}
.triangles {
  position: absolute;
  top: 70%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 4rem;
}
.triangle {
  position: absolute;
  width: 100%;
  top: 0;
  left: 0;
  opacity: 0;
}
.triangle:nth-of-type(1) {
  animation: triangle-animation-opt(hand, $triangle-animation-delay);
  .triangle-icon {
    animation: blink 0.5s linear #{$triangle-animation-delay + 0.8s} 2;
    &:hover {
      color: #ffcba4;
    }
  }
}
.triangle:nth-of-type(2) {
  animation: triangle-animation-opt(mask, $triangle-animation-delay + $triangle-animation-duration);
  .triangle-icon {
    animation: blink 0.5s linear #{$triangle-animation-delay + $triangle-animation-duration + 0.8s} 2;
    &:hover {
      color: skyblue;
    }
  }
}
.triangle:nth-of-type(3) {
  animation: triangle-animation-opt(home, $triangle-animation-delay + 2 * $triangle-animation-duration);
  .triangle-icon {
    animation: blink 0.5s linear #{$triangle-animation-delay + 2 * $triangle-animation-duration + 0.8s} 2;
    &:hover {
      color: orangered;
    }
  }
}

.video {
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
  background-color: #000;
}

.video-icon {
  position: fixed;
  top: 1rem;
  right: 1rem;
  z-index: 20;
  font-size: 2rem;
}

.data-area {
  position: relative;
  width: 100%;
  margin: 3rem;
  @include flex(column, center, center);
}

.dashboard-area {
  @include flex(column, center, center);
}
.dashboards {
  @include flex(null, center, center);
  opacity: $blur;
}
.dashboard {
  width: 15rem;
  height: 6rem;
  margin: 1rem;
  border-radius: 15px;
  color: #fff;
  font-size: 2rem;
  line-height: 3rem;
  text-align: center;
}

.dashboard-confirmed {
  background-color: rgb(255, 193, 78);
}
.dashboard-recovered {
  background-color: rgb(132, 216, 115);
}
.dashboard-deaths {
  background-color: rgb(255, 91, 91);
}

.dropdown-area {
  position: relative;
  margin: 1rem;
}
.dropdown {
  display: inline-block;
  opacity: $blur-ex;
}

.btn-search {
  position: absolute;
  padding-left: 0.7 * $btn-search-side;
  margin-left: 3rem;
  width: 10rem;
  height: 100%;
  overflow: hidden;
  border: none;
  outline: none;
  border-radius: 25px;
  font-size: 1.2rem;
  opacity: $blur-ex;
}
.btn-search::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: $btn-search-side;
  height: $btn-search-side;
  transform: translate(-50%, 10%) rotate(45deg);
}
.btn-search-green::before {
  background-color: green;
}
.btn-search-red::before {
  background-color: red;
}

.input {
  width: $input-width;
  padding: $input-padding;
  border-radius: 25px;
  outline: none;
  font-size: 1.2rem;
  text-align: center;
}
.input::-webkit-calendar-picker-indicator {
  display: none;
}
.input:focus {
  box-shadow: 0 -3px 7px rgba(0, 0, 0, 0.3);
}
.input-green:focus {
  border-color: green;
}
.input-red:focus {
  border-color: red;
}

html {
  @media screen and (max-width: 1024px) {
    font-size: 0.8rem;
  }
  @media screen and (max-width: 768px) {
    font-size: 0.6rem;
  }
}

@media screen and (max-width: 576px) {
  html {
    font-size: 0.8rem;
  }
  .data-area {
    height: 75vh;
  }
  .dashboards {
    flex-direction: column;
  }
  .dropdown-area {
    @include flex(column, center, center);
  }
  .btn-search {
    position: relative;
    width: $input-width;
    margin: 1rem 0;
    padding: $input-padding;
  }
  .btn-search::before {
    transform: translate(-50%, 5%) rotate(45deg);
  }
}

